# robodeck

./: Cargo.toml  Makefile  README.md  Trunk.toml  flake.nix  index.html
deck/: Cargo.toml
deck/src/: app.css  main.rs
robo/: Cargo.toml
robo/src/: lib.rs  main.rs
src/: app.css  main.rs
