[package]
name = "uimap"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "deck",
  "robo",
]
default-members = [
  ".",
  "robo",
]
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
robo = { path = "robo" }

[profile.release]
lto = true
opt-level = "s"
