[package]
name = "deck"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "ProgressEvent",
  "Url",
  "Window",
] }
