[package]
name = "robo"
version = "0.1.0"
edition = "2024"

[lib]
name = "robo"
path = "src/lib.rs"

[[bin]]
name = "robo"
path = "src/main.rs"

[dependencies]
axum = "0.8"
cdr = "0.2"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
zenoh = "1.8.0"
